[package]
name = "tunneload"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11" }
env_logger = { version = "0.8.2" }
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "net", "time"] }
async-trait = { version = "0.1.42" }
base64 = { version = "0.13.0" }
dirs = { version = "3.0.1" }
left-right = { version = "0.11.0" }
structopt = { version = "0.3.21" }
futures = { version = "0.3.12" }

kube = { version = "0.49.0", features = ["derive"] }
kube-runtime = "0.49.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
kube-derive = "0.49.0"
serde = "1.0.118"
serde_json = "1.0.61"
serde_yaml = "0.8"
schemars = "0.8.0"

tunneler-core = { version = "0.5.0" }

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
path = "./benches/benchmark.rs"
