[package]
name = "tunneload"
version = "0.4.4"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11" }
env_logger = { version = "0.8.2" }
tokio = { version = "1.5.0", features = ["rt", "rt-multi-thread", "net", "time"] }
async-trait = { version = "0.1.42" }
base64 = { version = "0.13.0" }
dirs = { version = "3.0.1" }
left-right = { version = "0.11.0" }
structopt = { version = "0.3.21" }
futures = { version = "0.3.12" }
prometheus = { version = "0.11.0" }
lazy_static = { version = "1.4.0" }
flate2 = { version = "1.0.20" }
caseless = { version = "0.2.1" }
arc-swap = { version = "1.2" }

# This is needed for the Kubernetes interactions
kube = { version = "0.49.0", features = ["derive"] }
kube-runtime = "0.49.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
kube-derive = "0.49.0"
serde = "1.0.118"
serde_json = "1.0.61"
serde_yaml = "0.8"
schemars = "0.8.0"

# This is needed for the TLS integration
rustls = { version = "0.19.0" }
rustls-pemfile = { version = "0.2.0" }

# This is needed for htpasswd stuff
bcrypt = "0.6"
rust-crypto = "0.2"
pwhash = "0.3"

# This is needed for the Tunneler integration
tunneler-core = { version = "0.10.0", default-features = false, features = ["client"] }
# All the HTTP-Related stuff
stream-httparse = { version = "0.1.2" }

# For embeding the dashboard
rust-embed = "5.9.0"

[profile.release]
lto = true
codegen-units = 1
