[package]
name = "tunneload"
version = "0.8.6"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal Rules-Crate
rules = { path = "../crates/rules" }
general = { path = "../crates/general" }
general_traits = { path = "../crates/general_traits" }
htpasswd = { path = "../crates/htpasswd" }
plugins = { path = "../crates/plugins" }
tls = { path = "../crates/tls" }

log = { version = "0.4" }
env_logger = { version = "0.9" }
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "net", "time"] }
async-trait = { version = "0.1" }
base64 = { version = "0.13" }
dirs = { version = "4.0" }
left-right = { version = "0.11" }
argser = { version = "0.2.3" }
futures = { version = "0.3.12" }
prometheus = { version = "0.13.0" }
lazy_static = { version = "1.4.0" }
flate2 = { version = "1.0.20" }
caseless = { version = "0.2.1" }
arc-swap = { version = "1.2" }
chrono = { version = "0.4" }

# This is needed for the Kubernetes interactions
kube = { version = "0.63.0", features = ["derive"] }
kube-runtime = "0.63.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_22"] }
kube-derive = "0.63.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
schemars = "0.8"

# This is needed for the TLS integration
rustls = { version = "0.20" }
rustls-pemfile = { version = "0.3" }

# This is needed for htpasswd stuff
bcrypt = "0.12"
rust-crypto = "0.2"
pwhash = "1.0"

# This is needed for the Tunneler integration
tunneler-core = { version = "0.13.0", default-features = false, features = ["client", "trace"] }
# All the HTTP-Related stuff
stream-httparse = { version = "0.2.6" }

# For embeding the dashboard
rust-embed = "5.9.0"

# The File-Events
notify = "4.0"

# Wasmer
wasmer = { version = "2.1.0" }

# Needed for the automatic TLS-Stuff
acme2 = { version = "0.5.0" }
async-raft = { version = "0.6.1" }
anyhow = { version = "1.0.40" }
reqwest = { version = "0.11.3", features = ["json"] }
rand = "0.8.3"
tokio-stream = { version = "0.1.6", features = ["sync"] }
pnet = { version = "0.29" }
url = { version = "2.2" }

# Tracing
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
criterion = "0.3"
inventory = "0.2"
tokio = { version = "1.17", features = ["process"] }


[[bench]]
name = "middlewares"
harness = false

[[test]]
name = "e2e"
path = "e2e-tests/main.rs"
test = false
harness = false
