[package]
name = "general_traits"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11", default_features = false, features = ["io-util"] }
async-trait = { version = "0.1.42" }

serde_json = "1.0.61"

# All the HTTP-Related stuff
stream-httparse = { version = "0.2.6" }

# Tracing
tracing = { version = "0.1" }
