[package]
name = "plugins"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.118"
serde_json = "1.0.61"
futures = { version = "0.3.12" }
async-trait = { version = "0.1.42" }
tokio = { version = "1.17", default_features = false, features = ["sync", "rt"] }

# All the HTTP-Related stuff
stream-httparse = { version = "0.2.6" }

# Wasmer
wasmer = { version = "2.1.0" }

# Tracing
tracing = { version = "0.1" }

# The General stuff
general = { path = "../general" }
general_traits = { path = "../general_traits" }
