[package]
name = "rules"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.118"
left-right = { version = "0.11.0" }
tokio = { version = "1.16", features = ["net"] }
base64 = { version = "0.13" }
flate2 = { version = "1.0" }

# All the HTTP-Related stuff
stream-httparse = { version = "0.2.6" }

# Tracing
tracing = { version = "0.1" }

# Some General stuff
general = { path = "../general" }
general_traits =  { path = "../general_traits" }
# The htpasswd stuff
htpasswd = { path = "../htpasswd" }
# The Plugin stuff
plugins = { path = "../plugins" }
