[package]
name = "tls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"

# This is needed for the TLS integration
rustls = { version = "0.20.3" }
rustls-pemfile = { version = "0.2.0" }

acme2 = { version = "0.5.0" }

chrono = { version = "0.4" }

serde = "1.0.118"
serde_json = "1.0.61"

kube = { version = "0.59.0", features = ["derive"] }
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }

# Tracing stuff
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
